--- a/hubi/views/packing_preparation_views.xml
+++ b/hubi/views/packing_preparation_views.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-	<record id="view_hubi_orders_packing_preparation_tree" model="ir.ui.view">
-		<field name="name">hubi.sale.order.packing.preparation.tree</field>
+	<record id="view_hubi_packing_preparation_tree" model="ir.ui.view">
+		<field name="name">hubi.packing.preparation.tree</field>
 		<field name="model">sale.order.line</field> 
 		<field name="arch" type="xml">
 			<tree string="Packing Preparation" default_order="partner_id">
