--- a/hubi/views/inherited_packing_preparation_views.xml
+++ b/hubi/views/inherited_packing_preparation_views.xml
@@ -5,7 +5,7 @@
 		<field name="name">hubi.packing.preparation.tree</field>
 		<field name="model">sale.order.line</field> 
 		<field name="arch" type="xml">
-			<tree string="Packing Preparation" import="false" create="false" default_order="partner_id">
+			<tree string="Packing Preparation" import="false" create="false" default_order="order_id, product_id">
 				<field name="partner_id"/>
 				<field name="order_id"/>
 				<field name="product_id"/>
