--- a/hubi/views/inherited_packing_preparation_views.xml
+++ b/hubi/views/inherited_packing_preparation_views.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
 	<data>
-	<record id="action_hubi_packing_preparation" model="ir.ui.view">
+	<record id="view_hubi_packing_preparation_tree" model="ir.ui.view">
 		<field name="name">hubi.packing.preparation.tree</field>
 		<field name="model">sale.order.line</field> 
 		<field name="arch" type="xml">
@@ -15,5 +15,18 @@
 			</tree>
 		</field>
 	</record>
+	
+	<record id="action_hubi_packing_preparation" model="ir.actions.act_window">
+        <field name="name">Packing Preparation</field>
+        <field name="res_model">sale.order.line</field>
+        <field name="view_type">form</field>
+        <field name="context">{'search_default_Sales':1}</field>
+        <field name="search_view_id" ref="hubi.view_hubi_saleorder_report_search"/>
+        <!--<field name="view_id" ref="view_hubi_saleorder_daily_report_pivot"/>-->
+        <field name="view_ids" eval="[(5, 0),
+                (0, 0, {'view_mode': 'pivot', 'view_id': ref('view_hubi_saleorder_reference_report_pivot')}),
+                (0, 0, {'view_mode': 'tree', 'view_id': ref('view_hubi_saleorder_report_reference_tree')})]"/>
+    </record> 
+	
 	</data>
 </odoo>
