--- a/hubi/views/inherited_packing_preparation_views.xml
+++ b/hubi/views/inherited_packing_preparation_views.xml
@@ -11,7 +11,7 @@
 				<field name="product_id"/>
 				<field name="product_uom_qty" string="Qty"/>
 				<field name="label_model_id"/>
-				<button name="validation" class="oe_button oe_form_button" type="button" value="O.K."></button>
+				<button name="validation" class="oe_button oe_form_button" type="button" string="O.K."></button>
 			</tree>
 		</field>
 	</record>
