--- a/hubi/views/inherited_packing_preparation_views.xml
+++ b/hubi/views/inherited_packing_preparation_views.xml
@@ -6,11 +6,12 @@
 		<field name="model">sale.order.line</field> 
 		<field name="arch" type="xml">
 			<tree string="Packing Preparation" import="false" create="false" default_order="order_id, product_id">
-				<field name="partner_id"/>
+				<field name="order_partner_id"/>
 				<field name="order_id"/>
 				<field name="product_id"/>
 				<field name="product_uom_qty" string="Qty"/>
-				<button name="print_label" class="oe_button oe_form_button" type="button" string="Print Label"></button>
+				<button string="Print Label" type="object" name="create_print_label"
+                        default_focus="1" class="oe_link"/>
 				<button name="validation" class="oe_button oe_form_button" type="button" string="Done"></button>
 			</tree>
 		</field>
