--- a/hubi/views/inherited_packing_preparation_views.xml
+++ b/hubi/views/inherited_packing_preparation_views.xml
@@ -10,12 +10,13 @@
 				<field name="order_id"/>
 				<field name="product_id"/>
 				<field name="product_uom_qty" string="Qty"/>
-				<button string="Print Label" type="object" name="create_print_label"
-                        default_focus="1" class="oe_link"/>
+				<button name="create_print_label" class="oe_button oe_form_button oe_highlight" type="button" string="Print Label"></button>
 				<button name="validation" class="oe_button oe_form_button" type="button" string="Done"></button>
 			</tree>
 		</field>
 	</record>
+	
+	
 	
 	<record id="action_hubi_packing_preparation" model="ir.actions.act_window">
         <field name="name">Packing Preparation</field>
