--- a/hubi/views/inherited_packing_preparation_views.xml
+++ b/hubi/views/inherited_packing_preparation_views.xml
@@ -16,73 +16,6 @@
 		</field>
 	</record>
 	
-	<record id="create_print_label_packing_preparation">
-		<field name="name">hubi.print.label.packing.preparation.form</field>
-		<field name="model">wiz_create_print_label</field>
-		<field name="arch" type="xml">
-			<form string="Print Label">
-				<div class="oe_title">
-                    <group>
-                        <group>
-                        <field name="packaging_date"  />
-                        </group>
-                        <group>
-                        <field name="sending_date" />
-                        </group>
-                    </group>
-                
-                    <group>
-                        <group>
-                            <field name="partner_id" domain="[('customer', '=', True), ('parent_id', '=', False)]"  />
-                        </group>
-                        <group>
-                            <field name="etabexp_id" domain="[('is_company','=',1), ('customer','=',False), ('supplier','=',False)]"/>
-                            <field name="health_number" />
-                            <field name="code_128"  />
-                        </group>
-                    </group>
-                    
-                    <group>  
-                        <group>                  
-                            <label class="oe_edit_only" for="category_id" string="Category"/>
-                            <field name="category_id" class="oe_edit_only" nolabel="1"/>
-                            <label class="oe_edit_only" for="caliber_id" string="Caliber"/>
-                            <field name="caliber_id" class="oe_edit_only" nolabel="1"/>
-                            <label class="oe_edit_only" for="packaging_id" string="Packaging"/>
-                            <field name="packaging_id" class="oe_edit_only" nolabel="1"/>
-                    
-                            <field name="product_id" />
-                        </group>
-                        <group>
-                            <field name="code_barre"  />
-                            
-                            <field name="pds"  />
-                            <field name="nb_mini"  />
-                            <field name="numlot"  />
-                                                    
-                        </group>
-                    </group>
-                    
-                    <group>
-                        <field name="qte"  />
-                        <field name="color_etiq"  />
-                        <field name="label_id"  />
-                        <field name="printer_id" />
-                    </group>
-                    
-                </div>
-                <separator />
-
-                <footer>
-                    <button string="Create and Print Label" type="object" name="create_print_label"
-                        default_focus="1" class="oe_link"/>
-                    <button string="Cancel" class="oe_link" special="cancel" />
-                </footer>
-			</form>
-		</field>
-	</record>
-
-	
 	<record id="action_hubi_packing_preparation" model="ir.actions.act_window">
         <field name="name">Packing Preparation</field>
         <field name="res_model">sale.order.line</field>
@@ -93,15 +26,20 @@
                 (0, 0, {'view_mode': 'tree', 'view_id': ref('view_hubi_packing_preparation_tree')})]"/>
     </record> 
 	
-	<record id="action_hubi_create_print_label" model="ir.actions.act_window">
-        <field name="name">Create Print Label</field>
-        <field name="type">ir.actions.act_window</field>
-        <field name="res_model">wiz_create_print_label</field>
-        <field name="view_type">form</field>            
-        <field name="view_id" ref="create_print_label_packing_preparation"/>        
-        <field name="view_mode">tree,form</field>
-        <field name="target">new</field>
-    </record> 
+	<act_window
+            id="action_wiz_print_label_oder_line"
+            multi="True"
+            key2="client_action_multi"
+            name="Print Label from sale"
+            res_model="wiz.confirm.dialog"
+            src_model="sale.order.line"
+            context="{'default_confirm_message': 'Are you sure you want to print label', 
+                            'default_code_message': 'sale_order_print_label'}"
+            view_mode="form"
+            view_type="form"
+            target="new"
+            view_id="wiz_confirm_dialog_form">    
+        </act_window>
 	
 	</data>
 </odoo>
