--- a/hubi/views/inherited_packing_preparation_views.xml
+++ b/hubi/views/inherited_packing_preparation_views.xml
@@ -7,10 +7,10 @@
 		<field name="model">wiz_create_print_label</field>
 		<field name="arch" type="xml">
 			<tree string="Packing Preparation" import="false" create="false" default_order="order_id, product_id">
-				<field name="order_partner_id"/>
+				<!--<field name="order_partner_id"/>
 				<field name="order_id"/>
 				<field name="product_id"/>
-				<field name="product_uom_qty" string="Qty"/>
+				<field name="product_uom_qty" string="Qty"/>-->
 				<button name="wiz_create_print_label" class="oe_button oe_form_button oe_highlight" type="object" string="Print Label"></button>
 				<button name="validation" class="oe_button oe_form_button" type="button" string="Done"></button>
 			</tree>
