--- a/hubi/views/inherited_packing_preparation_views.xml
+++ b/hubi/views/inherited_packing_preparation_views.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
 	<data>
+	
+	<template id="report_header">
+		<t t-extend="sale.action_report_saleorder">
+			<xpath expr="t[@t-call='web.external_layout']" position="replace">
+				<t t-call="abc.external_layout__standard_abc">
+					<t t-call="abc.report_invoice_document_abc_body"/>
+				</t>
+			</xpath>
+		</t>
+	</template>
+	
 	<record id="view_hubi_packing_preparation_tree" model="ir.ui.view">
 		<field name="name">hubi.packing.preparation.tree</field>
 		<field name="model">sale.order.line</field>
