--- a/hubi/views/inherited_partner_views.xml
+++ b/hubi/views/inherited_partner_views.xml
@@ -326,7 +326,18 @@
             <field name="view_mode">tree,form,kanban</field>
         </record>
 
-    
+		<record id="view_category_property_form" model="ir.ui.view">
+        <field name="name">partner.over.credit.limit.form.inherit</field>
+        <field name="model">res.partner</field>
+        <field name="type">form</field>
+        <field name="inherit_id" ref="account.view_partner_property_form"/>
+        <field name="arch" type="xml">
+            <group name="acc_sale" position="inside">
+                <field name="credit_limit"/>
+                <field name="over_credit"/>
+            </group>
+        </field>
+        </record>
     
         <record id="search_establishment" model="ir.ui.view">
             <field name="name">establishment.select</field>
