--- a/hubi/views/inherited_account_invoice_views.xml
+++ b/hubi/views/inherited_account_invoice_views.xml
@@ -125,6 +125,18 @@
             </xpath>     
         </field>
     </record>
+	
+	<record id="action_email_invoice_send_server" model="ir.actions.server">
+            <field name="name">Email: Send email</field>
+            <field name="type">ir.actions.server</field>
+            <field name="model_id" ref="model_account_invoice"/>
+            <field name="binding_model_id" ref="model_account_invoice"/>
+            <field name="state">code</field>
+            <field name="code">
+                if records:
+                    action = records.invoice_send_email()
+            </field>
+    </record>
     
     </data>
  
