--- a/hubi/views/inherited_packing_preparation_views.xml
+++ b/hubi/views/inherited_packing_preparation_views.xml
@@ -11,7 +11,7 @@
 				<field name="order_id"/>
 				<field name="product_id"/>
 				<field name="product_uom_qty" string="Qty"/>
-				<button name="print_label" class="o_sale_print" states="sent,sale" type="object" string="Print Label"></button>
+				<button name="print_label" type="object" string="Print Label"></button>
 				<button name="validation" class="oe_button oe_form_button" type="button" string="Done"></button>
 			</tree>
 		</field>
@@ -22,7 +22,6 @@
         <field name="res_model">sale.order.line</field>
         <field name="view_type">form</field>
         <field name="context">{'search_default_Sales':1}</field>
-        <!--<field name="view_id" ref="view_hubi_saleorder_daily_report_pivot"/>-->
         <field name="view_ids" eval="[(5, 0),
                 (0, 0, {'view_mode': 'tree', 'view_id': ref('view_hubi_packing_preparation_tree')})]"/>
     </record> 
