--- a/hubi/views/inherited_packing_preparation_views.xml
+++ b/hubi/views/inherited_packing_preparation_views.xml
@@ -11,8 +11,8 @@
 				<field name="order_id"/>
 				<field name="product_id"/>
 				<field name="product_uom_qty" string="Qty"/>
-				<button name="print_label" type="action" string="Print Label"></button>
-				<button name="validation" type="submit" string="Done"></button>
+				<button name="print_label" type="object" string="Print Label"></button>
+				<button name="validation" type="object" string="Done"></button>
 			</tree>
 		</field>
 	</record>
