--- a/hubi/views/inherited_packing_preparation_views.xml
+++ b/hubi/views/inherited_packing_preparation_views.xml
@@ -12,7 +12,7 @@
 				<field name="product_id"/>
 				<field name="product_uom_qty" string="Qty"/>
 				<button name="print_label" type="object" string="Print Label"></button>
-				<field name="validation"/>
+				<button name="validation" type="object" string="Done"></button>
 			</tree>
 		</field>
 	</record>
