--- a/hubi/views/inherited_packing_preparation_views.xml
+++ b/hubi/views/inherited_packing_preparation_views.xml
@@ -6,6 +6,7 @@
 		<field name="name">hubi.packing.preparation.tree</field>
 		<field name="model">sale.order.line</field>
 		<field name="arch" type="xml">
+		<report id="report_orderline_label">
 			<tree string="Packing Preparation" import="false" create="false" default_order="order_id, product_id">
 				<field name="order_partner_id"/>
 				<field name="order_id"/>
@@ -14,6 +15,7 @@
 				<button name="print_label" type="object" string="Print Label"/>
 				<button name="validation" type="object" string="Done"/>
 			</tree>
+		</report>
 		</field>
 	</record>
 	
