--- a/hubi/views/inherited_packing_preparation_views.xml
+++ b/hubi/views/inherited_packing_preparation_views.xml
@@ -13,7 +13,7 @@
 				<field name="product_uom_qty" string="Qty"  attrs="{'invisible':[('done', '=', False)]}" />
 				<button name="print_label" type="object" string="Print Label"/>
 				<button name="validation" type="object" string="Done"/>
-				<report name="report_orderline_label"/>
+				<!--<report name="report_orderline_label"/>-->
 			</tree>
 		</field>
 	</record>
