--- a/hubi/views/inherited_packing_preparation_views.xml
+++ b/hubi/views/inherited_packing_preparation_views.xml
@@ -7,12 +7,12 @@
 		<field name="model">sale.order.line</field>
 		<field name="arch" type="xml">
 			<tree string="Packing Preparation" import="false" create="false" default_order="order_id, product_id">
-				<field name="order_partner_id"  attrs="{'invisible':[('done', '=', False)]}" />
-				<field name="order_id"  attrs="{'invisible':[('done', '=', False)]}" />
-				<field name="product_id"  attrs="{'invisible':[('done', '=', False)]}" />
-				<field name="product_uom_qty" string="Qty"  attrs="{'invisible':[('done', '=', False)]}" />
+				<field name="order_partner_id"/> <!--attrs="{'invisible':[('done', '=', False)]}"-->
+				<field name="order_id"/>  <!--attrs="{'invisible':[('done', '=', False)]}"-->
+				<field name="product_id"/> <!--attrs="{'invisible':[('done', '=', False)]}"-->
+				<field name="product_uom_qty" string="Qty"/> <!--attrs="{'invisible':[('done', '=', False)]}"-->
 				<button name="print_label" type="object" string="Print Label"/>
-				<button name="done" type="object" string="Done"/>
+				<button name="validation" type="object" string="Done"/>
 				<!--<report id="report_orderline_label"/>-->
 			</tree>
 		</field>
