--- a/hubi/views/inherited_packing_preparation_views.xml
+++ b/hubi/views/inherited_packing_preparation_views.xml
@@ -20,11 +20,11 @@
 	
 	<report
 		id="report_orderline_label"
-		model="sale.order"
+		model="sale.report"
 		string="Order Lines"
 		report_type="qweb-pdf"
-		name="sale.report_saleorder"
-		file="sale.report_saleorder"
+		name="hubi.saleorder.report.daily.tree"
+		file="hubi.saleorder.report.daily.tree"
 		attachment_use="True"
 		attachment="(object.state in ('open','paid')) and
         ('INV'+(object.number or '').replace('/','')+'.pdf')"
