--- a/hubi/views/inherited_packing_preparation_views.xml
+++ b/hubi/views/inherited_packing_preparation_views.xml
@@ -20,11 +20,11 @@
 	
 	<report
 		id="report_orderline_label"
-		model="sale.report"
+		model="account.invoice.report"
 		string="Order Lines"
 		report_type="qweb-pdf"
-		name="web.html_container"
-		file="web.html_container"
+		name="web.external_layout"
+		file="web.external_layout"
 		attachment_use="True"
 		attachment="(object.state in ('open','paid')) and
         ('INV'+(object.number or '').replace('/','')+'.pdf')"
